fix(ui): fix block editor toolbar on small devices

--- a/automad/ui/less/block_editor.less
+++ b/automad/ui/less/block_editor.less
@@ -40,7 +40,7 @@
 @import 'editorjs/toolbox.less';
 @import 'editorjs/tooltips.less';
 
-@am-blocks-breakpoint-small: 651px;
+@am-blocks-breakpoint-small: 850px;
 @am-blocks-breakpoint-small-max: (@am-blocks-breakpoint-small - 1px);
 
 @am-block-padding: 0.7rem;
