--- a/automad/ui/less/editorjs/toolbox.less
+++ b/automad/ui/less/editorjs/toolbox.less
@@ -34,10 +34,17 @@
 
 .am-block-editor {
 	& .ce-toolbox {
-		overflow: hidden;
+		overflow: scroll;
 		font-size: 0.86rem;
 		border-radius: @am-radius + 0.2rem;
 		background-color: @am-block-dropdown-background;
+
+		@media (max-width: @am-blocks-breakpoint-small-max) {
+			position: static;
+			transform: none !important;
+			align-items: center;
+			overflow-x: auto;
+		}
 
 		@media (min-width: @am-blocks-breakpoint-small) {
 			border: @am-hairline;
@@ -76,11 +83,13 @@
 			}
 		}
 
-		& [data-tool='header'],
-		& [data-tool='image'],
-		& [data-tool='buttons'],
-		& [data-tool='code'] {
-			border-left: @am-hairline;
+		@media (min-width: @am-blocks-breakpoint-small) {
+			& [data-tool='header'],
+			& [data-tool='image'],
+			& [data-tool='buttons'],
+			& [data-tool='code'] {
+				border-left: @am-hairline;
+			}
 		}
 	}
 }
